Completed Create Account API with test cases
