# src/main/java/com/neo/bank/api/mapper/CustomerMapper.java
@@ -1,7 +1,9 @@
 package com.neo.bank.api.mapper;
 
 import com.neo.bank.api.entity.Customer;
+import com.neo.bank.api.model.CreateAccountData;
 import com.neo.bank.api.model.CreateAccountRequest;
+import com.neo.bank.api.model.CreateAccountResponse;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -19,5 +21,11 @@ public class CustomerMapper {
     private String generateCustomerId() {
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyMMddHHmm");
         return "CUST"+ LocalDateTime.now().format(formatter);
+    }
+
+    public CreateAccountData mapCreateAccountResponse(Customer customer) {
+        return CreateAccountData.builder()
+                .customerId(customer.getCustomerId())
+                .build();
     }
 }
